--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-body {
+html, body {
+    height: 100%;
     margin: 0;
     font-family: 'Segoe UI';
 }
@@ -9,8 +10,7 @@ a {
 }
 #viewer {
     margin: auto;        
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
     max-width: auto;
     text-align: left;
     background-image: url(./penguin_back.jpg);
