--- a/link/style.css
+++ b/link/style.css
@@ -114,8 +114,23 @@ th {
         
     }
 
-    
+    h1 {
+        font-size: 20px; /* スマホサイズでのタイトルフォント調整 */
+    }
+
+    table {
+        width: 100%;
+        overflow-x: auto; /* 横スクロールを追加 */
+        display: block; /* テーブルをブロック要素にしてスクロール可能に */
+    }
+
+    th {
+        width: 33.33%; /* 各列の幅を均等に */
+    }
 }
+
+    
+
 
 
 
