--- a/link/style.css
+++ b/link/style.css
@@ -68,6 +68,16 @@ th {
     font-weight: bold;
 }
 
+.subtitle{
+    font-family:Impact ;
+    font-weight: normal;
+    font-style: oblique;
+}
+
+.content{
+    text-align: center;
+}
+
 @media screen and (max-width: 500px) {
    
     /* .header_contentsの調整 */
