--- a/link/style.css
+++ b/link/style.css
@@ -1,6 +1,6 @@
 body {
     margin: auto;
-    font-family: 'Segoe UI';
+    font-family: 'Hiragino Sans W3', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', 'メイリオ', 'Meiryo', 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
 }
 
 .header_contents {
