--- a/about/style.css
+++ b/about/style.css
@@ -22,7 +22,7 @@ body {
 
 .nav_link {
     font-size: 22px;
-    font-family: "Century Gothic";
+    font-family: "Montserrat";
     font-weight: bold;
     color: #000000;
     margin: 0 15px;
