--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body {
     height: 100%;
     margin: 0;
-    font-family: 'Hiragino Sans W3', 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', 'メイリオ', 'Meiryo', 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
+    font-family: 'Hiragino Sans W3' 'Meiryo', 'MS PGothic', sans-serif;
 }
 
 a {
@@ -49,7 +49,7 @@ a {
 
 .nav_link {
     font-size: 22px;
-    font-family: "Century Gothic";
+    font-family: "Montserrat";
     font-weight: bold;
     color: #000000;
     margin: 0 15px;
