--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body {
     height: 100%;
     margin: 0;
-    font-family: 'Hiragino Sans W3' 'Meiryo', 'MS PGothic', sans-serif;
+    font-family: sans-serif;
 }
 
 a {
@@ -85,7 +85,7 @@ a:hover {
     #content {
         padding: 20px; /* 内部余白を縮小 */
         left: 10px;    /* 左端からの距離を縮小 */
-        bottom: 300px;  /* 下端からの距離を縮小 */
+        bottom: 200px;  /* 下端からの距離を縮小 */
         width: calc(100% - 50px); /* 幅を画面サイズに適応 */
         height: auto;  /* 高さを自動調整 */
     }
